--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">My Application_GPS</string>
     <string name="button1">Compare</string>
     <string name="_0">0</string>
+    <string name="spe">SPEED value:</string>
 </resources>
